# structural-gt

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  MANIFEST.in  README.ipynb  README.md  StructuralGT-LINUX.spec  StructuralGT-Linux.spec  StructuralGT-Mac.spec  StructuralGT-Win.spec  StructuralGT.spec  automated_data_collection.ipynb  automated_data_collection_v2.ipynb  compile_c.txt  filters.csv  graph_classifier.ipynb  icon.icns  image_processing_tutorial.txt  inno_setup.iss  license.txt  power_law_behavior.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  sgt_configs.ini  slurm.txt  start.txt  workspace.txt
c_modules/: sgt_base.c  sgt_base.h  sgtmodule.c  test.c  testmodule.c
c_modules/igraph_lib/include/igraph/: igraph_export.h  igraph_version.h
c_modules/lib_pthreads/libs/: libpthreadVC3-w32.lib  libpthreadVC3-w64.lib  libpthreadVC3.lib  libpthreadVC3d.lib  libpthreadVCE3.lib  libpthreadVCE3d.lib  libpthreadVSE3.lib  libpthreadVSE3d.lib  pthreadVC3-w64.lib  pthreadVC3.lib  pthreadVC3d.lib  pthreadVCE3.lib  pthreadVCE3d.lib  pthreadVSE3.lib  pthreadVSE3d.lib
datasets/: SR-NP.tif  sample.sgtproj  sgt_configs.ini  sgt_files_Frame0_adj.csv
datasets/Nanowires/GaussianBlur/: network.gsd
datasets/at3_10/: combined_stack.tiff  readme.txt
datasets/data-adj_mat/: 10layers.npz  1layers.npz  2layers.npz  3layers.npz  4layers.npz  5layers.npz  6layers.npz  7layers.npz  8layers.npz  9layers.npz
datasets/imagej/: sierpinski_res.tif
datasets/sgt_files/: InVitroBioFilm_SGT_scaling.xlsx  InVitroBioFilm_SGT_unweighted.csv  InVitroBioFilm_SGT_weighted.csv  InVitroBioFilm_graph.txt  InVitroBioFilm_skel.gsd
docs/: conf.py  index.md  requirements.txt
docs/source/: conf.py  index.rst
examples/imagej/: sierpinski.tif
images/: Sample3 BSE_017 - Small.tif  Sample3 BSE_017.tif  Sample3 BSE_018 - Small.tif  Sample3 SE_InL_002 - Small.tif  Sample3 SE_InL_003 - Small.tif  Sample6 BSE_010 - Small.tif  Sample6 SE_InL_002 - Small.tif  Sample6 SE_InL_002.tif  Sample6 SE_InL_003 - Small.tif  Sample6 SE_InL_006.tif  Sample6 SE_InL_007.tif
images/b-loofah/sgt_files/: b (5)_skel.gsd
instructions/: Dockerfile  README.ipynb  compile_c.txt  distribution.txt  slurm.txt  ubuntu_on_docker.txt  workspace.txt
modules/: sgt_base.c  sgt_base.h  sgt_module.c  sgtmodule.c
results/: Cont-SR_NPs_EL.csv  Cont-SR_NPs_graph.gexf  SR_NPs_EL.csv  SR_NPs_graph.gexf  deg.csv  sgt-v1_mycelium.txt  sgt-v2_mycelium.txt  sgt_app.log.txt
results/SamChigome/: betweeness.csv  closeness.csv  degree.csv  density.csv  diameter.csv  edges.csv  eigenvec.csv  scaling_laws.ipynb
src/: GT_Params.py  GT_Params_multi.py  GetWeights.py  SGT.py  __main__.py  config_loader.py  gui_multi_image.py  gui_single_image.py  multi_image_settings.py  process_image.py  settings.py  single_image_looper.py  skel_ID.py
src/SGT-c/: sgtmodule.c
src/StructuralGT/: __init__.py  cli_main.py  entrypoints.py  modules.py
src/StructuralGT/Networks/: GetWeights_3d.py  algorithm_benchmarks.py  average_nodal_connectivity.py  base.py  betweenness.py  binarizer.py  coflux_algorithms.pyx  deeplearner.py  electronic.py  error.py  exceptions.py  fiber_network.py  geometric.py  networks.py  particle_network.py  point_network.py  process_image.py  pytest.ini  skel_ID.py  sknwEdits.py  structural.py  util.py
src/StructuralGT/SGT/: base_image.py  fiber_network.py  graph_analyzer.py  graph_converter.py  graph_extractor.py  graph_metrics.py  graph_metrics_clang.py  graph_skeleton.py  image_base.py  image_processor.py  image_processor_v2.py  network_processor.py  progress_update.py  sgt_utils.py  sknw_mod.py
src/StructuralGT/SGT-c/: sgt_base.c  sgtmodule.c
src/StructuralGT/apps/: cli_main.py  gui_crop.py  gui_main.py  sgtv2.ui
src/StructuralGT/compute/: graph_analyzer.py
src/StructuralGT/configs/: config_loader.py  configs.ini  configs_gui.ini
src/StructuralGT/imaging/: base_image.py  image_processor.py  network_processor.py
src/StructuralGT/networks/: fiber_network.py  graph_skeleton.py
src/StructuralGT/utils/: config_loader.py  configs.ini  sgt_utils.py
src/StructuralGTb/: __init__.py  entrypoints.py
src/StructuralGTb/SGT/: graph_converter.py  graph_metrics.py  graph_metrics_clang.py  graph_skeleton.py  image_processor.py  progress_update.py
src/StructuralGTb/SGT-c/: sgt_base.c  sgtmodule.c  testmodule.c
src/StructuralGTb/apps/: cli_main.py  gui_main.py
src/StructuralGTb/c_modules/: sgt_base.c  sgtmodule.c
src/StructuralGTb/configs/: __init__.py  config_loader.py  configs.ini  configs_gui.ini
src/StructuralGTb/modules/: graph_metrics.py  graph_struct.py
src/StructuralGTb/py_modules/: graph_converter.py  graph_metrics.py  graph_skeleton.py  image_processor.py
src/StructuralGTc/: __init__.py
src/StructuralGTc/SGT/: graph_converter.py  graph_metrics.py  graph_metrics_clang.py
src/StructuralGTc/SGT-c/: sgtmodule.c
src/StructuralGTc/apps/: cli_main.py  gui_main.py  sgt.ui
src/StructuralGTc/c_modules/: sgtmodule.c
src/StructuralGTc/configs/: config_loader.py  configs.ini
src/StructuralGTc/py_modules/: graph_converter.py  graph_metrics.py  graph_struct.py  image_processor.py
src/chaosgt/: __init__.py  _cli_main.py  _config_loader.py  _gui_windows.py  chaosgt.py  configs.cfg  entrypoints.py  graph_metrics.py  graph_skeleton.py  graph_struct.py
src/chaosgt/apps/: _cli_main.py  _gui_main.py  cli_main.py  gui.ui  gui_crop.py  gui_main.py  gui_main_qt.py  gui_main_tk.py
src/chaosgt/configs/: _config_loader.py  _configs.cfg  config_loader.py  configs.ini  configs_gui.ini
src/chaosgt/modules/: graph_metrics.py  graph_skeleton.py  graph_struct.py
src/pkg_old/: GT_Params.py  GT_Params_multi.py  GetWeights.py  __main__.py  __test__.py  adj-diag.csv  multi_image_settings.py  process_image.py  settings.py
src/sgtlib/: __init__.py
src/sgtlib/apps/: gui_main.py
src/sgtlib/compute/: graph_analyzer.py
src/sgtlib/imaging/: base_image.py  image_processor.py
src/sgtlib/utils/: config_loader.py  configs.ini
tests/: igraph_test.c  sgt_test.c  sgt_test.py  test.c  tests.py
(+203 files in other folders)
