[build-system]
requires = ["setuptools >= 61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "StructuralGTb"
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "ypstruct",
  "matplotlib",
  "networkx",
  "sknw",
  "scikit-image",
  "opencv-python",
  "pillow"
]
requires-python = ">=3.11"
authors = [
  {name = "Dickson Owuor", email = "owuordickson@gmail.com"},
  {name = "Nicholas Kotov", email = "kotov@umich.edu"}
]
maintainers = [
  {name = "Dickson Owuor", email = "owuordickson@gmail.com"}
]
description = "A software tool that allows graph theory analysis of nano-structures."
readme =  "README.md"
license = {file = "LICENSE"}
keywords = ["nano-particles", "nano-structures", "graph-theory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU General Public License v3 License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

# docs = []

[project.optional-dependencies]
gui = ["pyqt6"]
cli = []

[project.urls]
Homepage = "https://github.com/owuordickson/structural-gt"
Documentation = "http://structural-gt.readthedocs.io"
Repository = "https://github.com/owuordickson/structural-gt.git"
"Bug Tracker" = "https://github.com/owuordickson/structural-gt/issues"
Changelog = "https://github.com/owuordickson/structural-gt/blob/master/CHANGELOG.md"

[project.scripts]
StructuralGTb-cli = "StructuralGTb:main_cli"

[project.gui-scripts]
StructuralGTb = "StructuralGTb:main_gui"

# Define the extension modules
[setuptools.extension]
name = "sgt_module"
sources = ["modules/sgt_base.c", "modules/sgt_modules.c"]
libraries = ["igraph", "pthread"]
library_dirs = ["modules/igraph_lib/lib"]
include_dirs = ["modules/igraph_lib/include/igraph"]

[tool.setuptools.dynamic]
version = {attr = "StructuralGTb.__version__"}

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["StructuralGTb*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["StructuralGTb.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

