[build-system]
requires = ["setuptools >= 75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "StructuralGT"
dynamic = ["version"]
dependencies = [
  "numpy<2.2",
  "pandas",
  "scipy",
  "matplotlib",
  "networkx",
  "sknw",
  "scikit-image",
  "opencv-python",
  "pillow"
]
requires-python = ">=3.11"
authors = [
  {name = "Dickson Owuor", email = "owuordickson@gmail.com"},
  {name = "Nicholas Kotov", email = "kotov@umich.edu"}
]
maintainers = [
  {name = "Dickson Owuor", email = "owuordickson@gmail.com"}
]
description = "A software tool that allows graph theory analysis of nano-structures."
readme =  "README.md"
license = {file = "LICENSE"}
keywords = ["nano-particles", "nano-structures", "graph-theory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: GNU General Public License v3 License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

# docs = []

[project.optional-dependencies]
gui = ["PySide6"]
cli = []

[project.urls]
Homepage = "https://github.com/owuordickson/structural-gt"
Documentation = "http://structural-gt.readthedocs.io"
Repository = "https://github.com/owuordickson/structural-gt.git"
"Bug Tracker" = "https://github.com/owuordickson/structural-gt/issues"
Changelog = "https://github.com/owuordickson/structural-gt/blob/main/CHANGELOG.md"

[project.scripts]
StructuralGT-cli = "StructuralGT.entrypoints:main_cli"

[project.gui-scripts]
StructuralGT = "StructuralGT.entrypoints:main_gui"

[tool.setuptools]
packages = ["StructuralGT"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "StructuralGT.__version__"}
