[metadata]
name = chaosgt
version = 0.0.1
author = Dickson Owuor
author_email = owuordickson@gmail.com
description = A software tool that implements chaos engineering in nano-structures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/owuordickson/chaos-gt
project_urls =
    Documentation = http://chaos-gt.readthedocs.io/
    Tracker = https://github.com/owuordickson/chaos-gt/issues
license = GNU General Public License v3
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

keywords = nano-particles nano-structures

[options]
package_dir =
packages = find:
python_requires = >=3.6
install_requires =
    numpy~=1.21.2
    pandas~=1.3.3

[options.packages.find]
where = src